[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daplis-rtp"
version = "1.2.0"
description = "Data Analysis Package for LInoSpad - Real-Time Plotting"
authors = [{ name = "Sergei Kulkov", email = "sergei.kulkov23@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["timestamp", "analysis", "LinoSPAD2"]

dependencies = [
    "matplotlib>=3.6.2",
    "numpy>=1.23.5",
    "PyQt5>=5.15.7",
    "setuptools>=70.0",
    "qdarkstyle>=3.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
daplis = ["*.txt", "*.csv"]

[project.scripts]
daplis-rtp = "daplis_rtp.main:main"

[project.urls]
Homepage = "https://github.com/rngKomorebi/daplis-rtp"