[metadata]
name = LinoSPAD2app
version = 0.9.0
description = LinoSPAD2 application for real-time sensor population plots
author = Sergei Kulkov
author_email = sergei.kulkov23@gmail.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, win32
classifiers = 
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    LinoSPAD2app
install_requires =
    matplotlib>=3.5.0
    numpy>=1.22.4
    PyQt5>=5.15.7

python_requires = >=3.8
package_dir =
    = src
zip_safe = no

[options.packages.find]
where = src
